--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 	        <li class="crumb"><a href="./home.html">Home</a></li>
 	        <li class="crumb"><a href="./profile.html">Profile</a></li>
 	        <li class="crumb"><a href="./about.html">About</a></li>
+			<li class="crumb"><a href="./neighborhood.html">Neighborhood</a></li>
 	    </ol>
 	</nav>
 
@@ -29,4 +30,5 @@
 	</content>
 
 </body>
+<a href="./home.html"><< Back </a>
 </html>
